And Nike text Added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <div class="shoesblurred"></div>
 </header>
     <h1>Lets Talk About Heading</h1>
+    <h1>And Nike</h1>
     </div>
 
 <script type="text/javascript">
