removed the AND NIKE text

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-<!doctype html>
+<!Doctype HTML>
 <html>
 <head>
 <meta charset="utf-8">
@@ -15,7 +14,6 @@
 <div class="shoesblurred"></div>
 </header>
     <h1>Lets Talk About Heading</h1>
-    <h1>And Nike</h1>
     </div>
 
 <script type="text/javascript">
